New Crowdin translations (#271)
* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Italian)

* New translations cr_strings.xml (Polish)

* New translations cr_strings.xml (Portuguese)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Romanian)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Slovak)

* New translations cr_strings.xml (Turkish)

* New translations cr_strings.xml (Ukrainian)

* New translations cr_strings.xml (Vietnamese)

* New translations cr_strings.xml (Japanese)

* New translations cr_strings.xml (Spanish)

* New translations cr_strings.xml (Chinese Traditional)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Bulgarian)

* New translations cr_strings.xml (Chinese Simplified)

* New translations cr_strings.xml (Indonesian)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Dutch)

* New translations cr_strings.xml (French)

* New translations cr_strings.xml (German)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Czech)

* New translations cr_strings.xml (Russian)

* New translations cr_strings.xml (Belarusian)

* New translations cr_strings.xml (Hungarian)

* New translations cr_strings.xml (Chinese Simplified)

--- a/packages/SystemUI/res/values-it-rIT/cr_strings.xml
+++ b/packages/SystemUI/res/values-it-rIT/cr_strings.xml
@@ -191,11 +191,16 @@
     <!-- VPN icon -->
     <string name="status_bar_vpn">VPN</string>
     <!-- Free ram -->
-    <string name="recents_free_ram">Free RAM: %1$d MB</string>
+    <string name="recents_free_ram">RAM libera: %1$d MB</string>
     <!-- Reboot/Recovery/PowerOff QS Tile -->
     <string name="quick_settings_reboot_label">Reboot</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
-    <string name="quick_settings_poweroff_label">Power off</string>
+    <string name="quick_settings_poweroff_label">Spegni</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">Gaming mode</string>
+    <string name="gaming_mode_not_enabled">Gaming mode is disabled in settings</string>
+    <string name="quick_settings_gaming_mode_label">Gaming mode</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">Gaming mode turned off.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">Gaming mode turned on.</string>
 </resources>
