--- a/packages/SystemUI/res/values-cs-rCZ/cr_strings.xml
+++ b/packages/SystemUI/res/values-cs-rCZ/cr_strings.xml
@@ -197,5 +197,10 @@
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
     <string name="quick_settings_poweroff_label">Vypnout</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">Herní režim</string>
+    <string name="gaming_mode_not_enabled">Herní režim je zakázán v Nastavení</string>
+    <string name="quick_settings_gaming_mode_label">Herní režim</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">Herní režim vypnutý.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">Herní režim zapnutý.</string>
 </resources>
