--- a/packages/SystemUI/res/values-de-rDE/cr_strings.xml
+++ b/packages/SystemUI/res/values-de-rDE/cr_strings.xml
@@ -182,10 +182,10 @@
     <string name="text_clock_units_string_h_thirteen">Dreizehn</string>
     <string name="text_clock_units_string_h_fourteen">Vierzehn</string>
     <string name="text_clock_units_string_h_fifteen">Fünfzehn</string>
-    <string name="text_clock_units_string_h_sixteen">Sechzehn Uhr</string>
-    <string name="text_clock_units_string_h_seventeen">Siebzehn Uhr</string>
-    <string name="text_clock_units_string_h_eighteen">Achtzehn Uhr</string>
-    <string name="text_clock_units_string_h_nineteen">Neunzehn Uhr</string>
+    <string name="text_clock_units_string_h_sixteen">Sechzehn</string>
+    <string name="text_clock_units_string_h_seventeen">Siebzehn</string>
+    <string name="text_clock_units_string_h_eighteen">Achtzehn</string>
+    <string name="text_clock_units_string_h_nineteen">Neunzehn</string>
     <!-- OneHand mode QS tile -->
     <string name="qs_onehand_label">Einhandmodus</string>
     <!-- VPN icon -->
@@ -197,5 +197,10 @@
     <string name="quick_settings_reboot_recovery_label">Wiederherstellung</string>
     <string name="quick_settings_poweroff_label">Ausschalten</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">Gaming mode</string>
+    <string name="gaming_mode_not_enabled">Gaming mode is disabled in settings</string>
+    <string name="quick_settings_gaming_mode_label">Gaming mode</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">Gaming mode turned off.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">Gaming mode turned on.</string>
 </resources>
