--- a/packages/SystemUI/res/values-hu-rHU/cr_strings.xml
+++ b/packages/SystemUI/res/values-hu-rHU/cr_strings.xml
@@ -197,5 +197,10 @@
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
     <string name="quick_settings_poweroff_label">Kikapcsolás</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">Játékmód</string>
+    <string name="gaming_mode_not_enabled">A Játékmód a beállításokban le van tiltva</string>
+    <string name="quick_settings_gaming_mode_label">Játékmód</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">A Játékmód kikapcsolásra került.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">A Játékmód bekapcsolásra került.</string>
 </resources>
