--- a/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
+++ b/packages/SystemUI/res/values-ru-rRU/cr_strings.xml
@@ -197,5 +197,10 @@
     <string name="quick_settings_reboot_recovery_label">Режим восстановления</string>
     <string name="quick_settings_poweroff_label">Выключение</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">Игровой режим</string>
+    <string name="gaming_mode_not_enabled">Игровой режим отключен в настройках</string>
+    <string name="quick_settings_gaming_mode_label">Игровой режим</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">Игровой режим выключен.</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">Игровой режим включен.</string>
 </resources>
