--- a/packages/SystemUI/res/values-zh-rCN/cr_strings.xml
+++ b/packages/SystemUI/res/values-zh-rCN/cr_strings.xml
@@ -197,5 +197,10 @@
     <string name="quick_settings_reboot_recovery_label">恢复模式</string>
     <string name="quick_settings_poweroff_label">关机</string>
     <!-- Gaming mode -->
-    <string name="notification_channel_gaming">游戏模式</string>
+    <string name="gaming_mode_not_enabled">设置中禁用游戏模式</string>
+    <string name="quick_settings_gaming_mode_label">游戏模式</string>
+    <!-- Content description of the Gaming mode tile in quick settings when disabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_disabled">游戏模式已关闭</string>
+    <!-- Content description of the Gaming mode tile in quick settings when enabled (not shown on the screen). [CHAR LIMIT=NONE] -->
+    <string name="accessibility_quick_settings_gaming_mode_enabled">游戏模式已开启</string>
 </resources>
